Add target browser library option that does not yet do anything

--- a/src/popup.html
+++ b/src/popup.html
@@ -61,6 +61,13 @@
         <input type="checkbox" id="verify" />
         <label for="verify">Check page contains element before performing the action</label>
       </div>
+      <div>
+        <select name="target_library" id="target" selected>
+          <option value="SeleniumLibrary">RPA.Browser.Selenium / SeleniumLibrary</option>
+          <option value="RobotFramework_Browser">RobotFramework Browser</option>
+        </select>
+        <label for="target"> Which library to target</label>
+      </div>
     </div>
   </div>
 
