--- a/src/popup.html
+++ b/src/popup.html
@@ -17,12 +17,12 @@
         record
       </button>
 
-      <button class="btn btn-wide" id="resume" tabindex="-1" title="resume with the recording">
-        resume
-      </button>
-
       <button class="btn btn-wide" id="stop" tabindex="-1" title="stop the recording">
         stop
+      </button>
+
+      <button class="btn btn-wide" id="resume" tabindex="-1" title="resume with the recording">
+        resume
       </button>
 
       <button class="btn btn-wide" id="pause" tabindex="-1" title="pause the recording">
@@ -48,11 +48,26 @@
   <div id="settings-panel" class="pad hidden">
     <div class="panel-row">
       <div>
-        <select name="target_library" id="target" selected>
-          <option value="SeleniumLibrary">RPA.Browser.Selenium / SeleniumLibrary</option>
-          <option value="Browser">RobotFramework Browser</option>
-        </select>
-        <label for="target"> Which library to target</label>
+        <p> Target Library </p>
+        <div>
+          <input type="radio" class="target" id="target_seleniumlibrary" name="target_library">
+          <label for="target_seleniumlibrary">RPA.Browser.Selenium / SeleniumLibrary</label>
+        </div>
+        <div>
+          <input type="radio" class="target" id= "target_rfbrowser" name="target_library">
+          <label for="target_rfbrowser">RobotFramework Browser</label>
+        </div>
+      </div>
+      <div>
+        <p> Target RF syntax </p>
+        <div>
+          <input type="radio" class="syntax" name="syntax" id="syntax_rpa" >
+          <label for="rpa_syntax">RPA (Tasks)</label>
+        </div>
+        <div>
+          <input type="radio" class="syntax" name="syntax" id="syntax_testing" >
+          <label for="test_syntax">Test Automation (Test cases)</label>
+        </div>
       </div>
       <div>
         <input type="checkbox" id="demo" />
