Fixed recording, add clear button

--- a/src/popup.html
+++ b/src/popup.html
@@ -94,7 +94,12 @@
     <button class="btn btn-wide" id="save" tabindex="-1" disabled title="download test script">
       save
     </button>
-    <button class="btn" id="copy" tabindex="-1" title="copy to clipboard" data-clipboard-target="#textarea-script" disabled></button>
+    <button class="btn" id="copy" tabindex="-1" title="copy to clipboard" data-clipboard-target="#textarea-script" disabled>
+    </button>
+    <button class="btn btn-wide" id="clear-script" tabindex="-1" title="clear script">
+      clear
+    </button>
+
   </div>
 
   <div class="pad">
