Improve handling of succesful record and scan, make the code block look nicer

--- a/src/popup.html
+++ b/src/popup.html
@@ -87,9 +87,7 @@
   </div>
 
   <div class="pad">
-    <pre id="script-container" >
-      <code id="script-output" tabindex="-1"  title="Generated script"></code>
-    </pre>
+    <pre id="script-container"><code id="script-output" tabindex="-1" title="Generated script"></code></pre>
   </div>
 
   <div class="hidden" id="xpath-inputs" >
