Make XPATH highlighting actually use dotted borders instead of yellow background

--- a/src/popup.html
+++ b/src/popup.html
@@ -83,7 +83,7 @@
   </div>
 
   <div class="pad">
-    <output id="status-field"></output>
+    status: <output id="status-field"></output>
   </div>
 
   <div class="pad">
