Add screenshot of 'tutorial mode', improve popup labels

--- a/src/popup.html
+++ b/src/popup.html
@@ -76,7 +76,7 @@
         <h3>Advanced settings</h3>
         <div>
           <input type="checkbox" id="demo" />
-          <label for="demo"> Add a 3s sleep after each action (for demo) </label>
+          <label for="demo"> Add a sleep after each action (for creating easy-to-showcase demo scripts) </label>
         </div>
         <div>
           <input type="checkbox" id="verify" />
