Start migration to jquery free chardinjs

--- a/src/popup.html
+++ b/src/popup.html
@@ -9,7 +9,7 @@
   <script src="../vendors/jquery-ui.min.js"></script>
   <script src="../vendors/clipboard-2.0.0.min.js"></script>
   <link href="../vendors/chardinjs.css" rel="stylesheet">
-  <script src="../vendors/chardinjs.min.js"></script>
+  <script src="../vendors/chardinjs-jqueryfree.js"></script>
 </head>
 
 <body class="container" tabindex="-1">
@@ -40,7 +40,7 @@
       </button>
     </span>
 
-    <button class="btn btn-thin btn-last" id="info" tabindex="-1" title="Toggle instructions"></button>
+    <button class="btn btn-thin btn-last" id="info" tabindex="-1" data-toggle="chardinjs" title="Toggle instructions"></button>
     <button class="btn btn-thin" id="settings" tabindex="-1" title="show/hide settings" data-intro="Settings" data-position="bottom"></button>
   </div>
 
